Enable HOT in integration tests and fix page loading order
Integration Test Updates:
- Removed the code that disabled HOT in @BeforeAll
- Added @Nested test classes for RBTree and HOT backend tests
- RBTree tests disable HOT, HOT tests enable HOT via system property
- All 7 tests pass (3 RBTree, 4 HOT)

StorageEngineReader.getHOTLeafPage() Fixes:
- Check transaction log FIRST before checking swizzled pages
- Check modified page first (the one being written), then complete
- Only load from storage if page key >= 0
- Proper handling of uncommitted pages

The HOT backend is now fully testable with:
- PATH index creation and query
- NAME index creation and query
- CAS index creation and query
- Basic listener infrastructure verification

Note: There's a known issue with querying uncommitted HOT pages
in the same transaction before commit. This is tracked separately.